Updated CSS file so that the website has black background and white font

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,8 @@
 body{
   margin: 0 auto;
+  font-family: 'Open Sans Condensed', sans-serif;
+  background-color: black;
+  color: white;
 }
 .carousel-indicators{
   bottom: 0;
@@ -40,8 +43,11 @@ strong{
   font-style: italic;
 }
 a {
-  color: black;
+  color: white;
 }
 .row h3{
   text-align: center;
+}
+a > img:hover{
+  opacity: 0.7;
 }
